--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&family=Rubik+Glitch+Pop&display=swap');
 
 /*familia de fuentes: 'Protest Guerrilla', sans-serif;
-familia de fuentes: 'Rubik Glitch Pop', sistema-ui;*/
 
 /*Home Responsive Inicia*/
-header .navbar{
+header .navbar {
     min-height: 120px;
     background-color: rgba(165, 42, 42, 0.752);
     position: fixed;
@@ -15,11 +14,11 @@ header .navbar{
     font-family: 'Protest Guerrilla', sans-serif;
 }
 
-.nav-link{
+.nav-link {
     color: aliceblue;
 }
 
-.jumbotron{
+.jumbotron {
     background-image: url(/img/Bajaj-NS-125-Rouser-Pulsar-9-1.jpg);
     background-size: cover;
     background-position: center;
@@ -28,7 +27,7 @@ header .navbar{
     place-items: center;
 }
 
-.call{
+.call {
     background-color: rgba(255, 255, 255, 0.685);
     margin-top: 100px;
     width: 70%;
@@ -37,34 +36,35 @@ header .navbar{
     text-align: center;
 }
 
-.call a{
+.call a {
     background-color: brown;
     text-shadow: black;
     text-decoration: none;
     padding: 10px 20px;
 }
 
-.call a:hover{
+.call a:hover {
     background-color: aliceblue;
     color: brown;
 }
-.call p{
+
+.call p {
     margin-bottom: 20px;
 }
 
-h2{
+h2 {
     margin-bottom: 0;
     padding: 10px;
     background-color: rgba(165, 42, 42, 0.879);
 }
 
-.curiosidades article{
+.curiosidades article {
     border: 20px solid white;
 }
 
 /*footer*/
 
-.what{
+.what {
     height: 40px;
     width: 40px;
     background-color: brown;
@@ -73,10 +73,10 @@ h2{
 
 /*Home Responsive Fin*/
 
+
 /*Inicio Indumentaria Responsive*/
 
-
-.galeria{
+.galeria {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(8, 200px);
@@ -84,7 +84,7 @@ h2{
     grid-gap: 20px;
 }
 
-.item{
+.item {
     border: 2px solid black;
     background-color: #ffff;
     background-size: cover;
@@ -92,11 +92,11 @@ h2{
     transition: all 0.9;
 }
 
-.item:hover{
+.item:hover {
     transform: scale(1.09);
 }
 
-footer{
+footer {
     background-color: black;
     color: aliceblue;
     text-align: center;
@@ -104,11 +104,11 @@ footer{
     font-size: 18px;
 }
 
-.redes{
+.redes {
     margin-top: 20px;
 }
 
-.redes a{
+.redes a {
     color: brown;
     text-decoration: none;
     letter-spacing: 15px;
@@ -117,85 +117,88 @@ footer{
 
 /*media queries inicia*/
 
-.item1{
+.item1 {
     background-image: url(/img/1.jpg.jpg);
     border-radius: 15px;
 }
 
-.item2{
+.item2 {
     background-image: url(/img/2.jpg.jpg);
     border-radius: 15px;
-}       
+}
 
-.item3{
+.item3 {
     background-image: url(/img/3.jpg.webp);
     border-radius: 15px;
 }
 
-.item4{
+.item4 {
     background-image: url(/img/4.jpg.jpg);
     border-radius: 15px;
-}   
+}
 
-.item5{
+.item5 {
     background-image: url(/img/5.jpg.jpg);
     border-radius: 15px;
 }
 
-.item6{
+.item6 {
     background-image: url(/img/6.jpg.jpg);
     border-radius: 15px;
-}   
+}
 
-.item7{
+.item7 {
     background-image: url(/img/7.1.jpg.jpg);
     border-radius: 15px;
 }
 
-.item8{
+.item8 {
     background-image: url(/img/mujer-poniendose-casco-viaje-carretera-motocicleta_23-2149023868.avif);
     border-radius: 15px;
-}   
+}
 
 
-@media only screen and ( min-width: 480px){
-    .galeria{
+@media only screen and (min-width: 480px) {
+    .galeria {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: repeat(4, 200px);
     }
 }
 
-@media only screen and ( min-width: 768px) and (max-width: 1024px){
-    .galeria{
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .galeria {
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: repeat(4, 200px);
     }
-    .item2{
+
+    .item2 {
         grid-column: 2/4;
         grid-row: 1/2;
     }
 
-    .item4{
+    .item4 {
         grid-column: 1/2;
         grid-row: 2/4;
     }
-    .item5{
+
+    .item5 {
         grid-column: 3/4;
         grid-row: 2/4;
     }
 
-    .item7{
+    .item7 {
         grid-column: 1/2;
         grid-row: 4/5;
     }
-    .item8{
+
+    .item8 {
         grid-column: 2/3;
         grid-row: 3/5;
     }
 }
 
-@media only screen and ( min-width:1024px){
-    .galeria{
+@media only screen and (min-width:1024px) {
+    .galeria {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 200px 200px;
     }
@@ -208,7 +211,7 @@ footer{
 
 /*Inicio link Noticias*/
 
-.noticias{
+.noticias {
     width: 40%;
 }
 
@@ -217,7 +220,7 @@ footer{
 
 /*Inicio de Link Ficha Tecnica*/
 
-.container{
+.container {
     height: 50vh;
     margin-top: 10%;
     display: flex;
@@ -225,93 +228,95 @@ footer{
 
 }
 
-#logo1{
+#logo1 {
     background-image: url(/img/logo\ bmw.webp);
     border-radius: 15px;
 }
 
-#logo2{
+#logo2 {
     background-image: url(/img/Honda-Logo.png);
     border-radius: 15px;
-}       
+}
 
-#logo3{
+#logo3 {
     background-image: url(/img/logo\ suzuki.webp);
     border-radius: 15px;
 }
 
-#logo4{
+#logo4 {
     background-image: url(/img/Logomarca2.png);
     border-radius: 15px;
-}   
+}
 
-#logo5{
+#logo5 {
     background-image: url(/img/Logo\ royal.webp);
     border-radius: 15px;
 }
 
-#logo6{
+#logo6 {
     background-image: url(/img/download.png);
     border-radius: 15px;
-}   
+}
 
-#logo7{
+#logo7 {
     background-image: url(/img/hero.png);
     border-radius: 15px;
 }
 
-#logo8{
+#logo8 {
     background-image: url(/img/s-l400.jpg);
     border-radius: 15px;
-}   
+}
+
 /*Fin de Linf Ficha Tecnica*/
 
 
 
 /*Inicio Link Equipamento */
 
-video{
+video {
     height: auto;
     width: 100%;
 }
 
-#img1{
+#img1 {
     background-image: url(/img/Baul\ 1.jpg.jpg);
     border-radius: 15px;
 }
 
-#img2{
+#img2 {
     background-image: url(/img/Defensas\ 2.jpg.webp);
     border-radius: 15px;
-}       
+}
 
-#img3{
+#img3 {
     background-image: url(/img/Equipamento.jpg.webp);
     border-radius: 15px;
 }
 
-#img4{
+#img4 {
     background-image: url(/img/Exploradora.jpg.webp);
     border-radius: 15px;
-}   
+}
 
-#img5{
+#img5 {
     background-image: url(/img/Luces.jpg.webp);
     border-radius: 15px;
 }
 
-#img6{
+#img6 {
     background-image: url(/img/parabrisa.jpg.webp);
     border-radius: 15px;
-}   
+}
 
-#img7{
+#img7 {
     background-image: url(/img/portacilular.jpg.jpg);
     border-radius: 15px;
 }
 
-#img8{
+#img8 {
     background-image: url(/img/Portaequi.jpg.webp);
-    border-radius: 15px;}
+    border-radius: 15px;
+}
 
 /*Fin Link Equipamento*/
